--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^23.14.0",
     "next": "14.2.7",
+    "next-i18next": "^15.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.0.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
