fix: 누락된 홈페이지 추가

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "popn",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://popn.ryu.sh",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
